--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- TODO: Set the document title to the name of your application --> <title>AccessTrial Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> <!-- TODO: Set the document title to the name of your application --> <title>Lovable App</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <!-- TODO: Set the document title to the name of your application -->
     <title>AccessTrial Demo</title>
     <meta name="description" content="Lovable Generated Project" />
